sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:2: error: ':' expected but ')' found.
def bubbleSort(T)  {
                ^AlgBubbleSort1:14: error: identifier expected but '}' found.
}
^